# 3d-printer-tuning-agents

./: .env.example  .gitignore  config.yaml  pyproject.toml  tune.py
agents/: calibration_agent.py  filament_research_agent.py  orchestrator.py  profile_advisor.py  speed_optimizer.py  vision_agent.py
docs/superpowers/plans/: 2026-04-14-agents.md  2026-04-14-dashboard.md  2026-04-14-foundation.md
docs/superpowers/specs/: 2026-04-14-3d-printer-tuning-agents-design.md  2026-04-14-dashboard-design.md
server/: app.py  camera_relay.py  ha_poller.py  orca_watcher.py  sse.py
server/static/: app.js  index.html  style.css
tests/: test_calibration_agent.py  test_calibration_db.py  test_camera_relay.py  test_cli.py  test_config.py  test_filament_research_agent.py  test_gcode_extractor.py  test_ha_client.py  test_ha_history_bootstrap.py  test_ha_poller.py  test_orca_profiles.py  test_orca_watcher.py  test_orchestrator.py  test_print_logger.py  test_profile_advisor.py  test_server.py  test_speed_optimizer.py  test_sse.py  test_vision_agent.py
tools/: calibration_db.py  config.py  gcode_extractor.py  ha_client.py  ha_history_bootstrap.py  orca_profiles.py  orca_reader.py  print_logger.py
