[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tune3d"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "watchdog>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
tune = "tune:cli"

[tool.setuptools.packages.find]
include = ["tools*", "agents*", "dashboard*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
